[gd_scene load_steps=12 format=3 uid="uid://6mc4hdd1xvgb"]

[ext_resource type="Script" path="res://Scripts/player_cam.gd" id="1_maico"]
[ext_resource type="Script" path="res://Scripts/player_0_camh.gd" id="3_8pnre"]
[ext_resource type="Script" path="res://Scripts/player_vision_ray.gd" id="3_x4pdr"]
[ext_resource type="Script" path="res://ai/Player HSM/crouch.gd" id="4_mkrde"]
[ext_resource type="Script" path="res://ai/Player HSM/jump.gd" id="4_tmn7o"]
[ext_resource type="Script" path="res://ai/Player HSM/idle.gd" id="6_23i8f"]
[ext_resource type="Script" path="res://ai/Player HSM/move.gd" id="7_0ld4w"]
[ext_resource type="Script" path="res://ai/Player HSM/sprint.gd" id="8_4bg82"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m3jvo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dfbb7"]
radius = 0.682141
height = 2.73462

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_425if"]
radius = 0.682141
height = 1.78367

[node name="player_0" type="CharacterBody3D" groups=["player"]]
collision_layer = 8
collision_mask = 263
script = ExtResource("1_maico")

[node name="player_0_shape" type="MeshInstance3D" parent="."]
transform = Transform3D(0.999998, 0, 0, 0, 0.999998, 0, 0, 0, 0.999998, 0, 0.998104, 0)
visible = false
mesh = SubResource("CapsuleMesh_m3jvo")

[node name="player_0_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.73, 0, 0, 0, 0.73, 0, 0, 0, 0.73, 0, 1, 0)
shape = SubResource("CapsuleShape3D_dfbb7")

[node name="Crouch_Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.73, 0, 0, 0, 0.73, 0, 0, 0, 0.73, 0, 0.656106, 0)
shape = SubResource("CapsuleShape3D_425if")
disabled = true

[node name="player_0_camh" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
script = ExtResource("3_8pnre")

[node name="player_0_cam" type="Camera3D" parent="player_0_camh"]

[node name="vision_ray" type="RayCast3D" parent="player_0_camh"]
target_position = Vector3(0, 0, -2)
collision_mask = 2
collide_with_areas = true
script = ExtResource("3_x4pdr")

[node name="crouch_check" type="RayCast3D" parent="player_0_camh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.358777, 0)
target_position = Vector3(0, 1, 0)
collision_mask = 7

[node name="LimboHSM" type="LimboHSM" parent="."]

[node name="crouch_state" type="LimboState" parent="LimboHSM"]
script = ExtResource("4_mkrde")

[node name="jump_state" type="LimboState" parent="LimboHSM"]
script = ExtResource("4_tmn7o")

[node name="idle_state" type="LimboState" parent="LimboHSM"]
script = ExtResource("6_23i8f")

[node name="move_state" type="LimboState" parent="LimboHSM"]
script = ExtResource("7_0ld4w")

[node name="sprint_state" type="LimboState" parent="LimboHSM"]
script = ExtResource("8_4bg82")
